[gd_scene load_steps=9 format=3 uid="uid://bb2mc886kn2ut"]

[ext_resource type="Script" uid="uid://2tt5cfwli31f" path="res://scenes/main_menu/main_menu_scene.gd" id="1_7hcs8"]
[ext_resource type="Texture2D" uid="uid://c2stfd8pji0i2" path="res://textures/background/cloud01.svg" id="2_sb6w7"]
[ext_resource type="Shader" uid="uid://dnygq3p2vm2r" path="res://scenes/main_menu/main_menu_scene_title_shader.tres" id="3_c05yd"]
[ext_resource type="Texture2D" uid="uid://docj80vvitaio" path="res://textures/background/background.png" id="3_yj20m"]

[sub_resource type="Gradient" id="Gradient_l6cm7"]
colors = PackedColorArray(0.72927, 0.815462, 0.987038, 1, 0.0203352, 0.719, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ekxnf"]
gradient = SubResource("Gradient_l6cm7")
fill = 1
fill_from = Vector2(0.79, 0)
fill_to = Vector2(0.5, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ekxnf"]
lifetime_randomness = 0.18
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 300, 1)
spread = 5.0
initial_velocity_min = 250.0
initial_velocity_max = 350.0
gravity = Vector3(0, 0, 0)
damping_max = 0.1
attractor_interaction_enabled = false
scale_min = 0.2
scale_max = 0.6
turbulence_noise_strength = 0.1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_026m6"]
shader = ExtResource("3_c05yd")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7hcs8")

[node name="SkyRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ekxnf")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.729412)
position = Vector2(-232, 326)
texture = ExtResource("2_sb6w7")
lifetime = 6.5
preprocess = 2.0
visibility_rect = Rect2(-400.236, -837.146, 3109.43, 1590.84)
process_material = SubResource("ParticleProcessMaterial_ekxnf")

[node name="TitleRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_026m6")
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 230.0
grow_horizontal = 2
texture = ExtResource("3_yj20m")
expand_mode = 2
stretch_mode = 5

[node name="MainMenuContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 40
theme_override_constants/margin_bottom = 40

[node name="PanelContainer" type="PanelContainer" parent="MainMenuContainer"]
layout_mode = 2

[node name="InternalMainMenuContainer" type="VBoxContainer" parent="MainMenuContainer/PanelContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="MainMenuContainer/PanelContainer/InternalMainMenuContainer"]
layout_mode = 2
text = "New Game"

[node name="SettingsButton" type="Button" parent="MainMenuContainer/PanelContainer/InternalMainMenuContainer"]
layout_mode = 2
text = "Settings"

[node name="HSeparator" type="HSeparator" parent="MainMenuContainer/PanelContainer/InternalMainMenuContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="MainMenuContainer/PanelContainer/InternalMainMenuContainer"]
layout_mode = 2
text = "Exit"

[node name="NewGameContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="NewGameContainer"]
layout_mode = 2
theme_override_constants/margin_top = 145

[node name="PanelContainer" type="PanelContainer" parent="NewGameContainer/MarginContainer"]
layout_mode = 2

[node name="InternalNewGameContainer" type="VBoxContainer" parent="NewGameContainer/MarginContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer"]
layout_mode = 2
text = "Map Size:"

[node name="SizeOptionButton" type="OptionButton" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 2
allow_reselect = true
item_count = 5
popup/item_0/text = "Small (200x200)"
popup/item_0/id = 0
popup/item_1/text = "Medium (300x300)"
popup/item_1/id = 1
popup/item_2/text = "Large (400x400)"
popup/item_2/id = 2
popup/item_3/text = "Gigantic (600x600)"
popup/item_3/id = 3
popup/item_4/text = "Ridiculous (1000x1000)"
popup/item_4/id = 4

[node name="Label2" type="Label" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer"]
layout_mode = 2
text = "Villagers:"

[node name="CenterContainer" type="CenterContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="PanelContainer" type="PanelContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"InsetPanelContainer"

[node name="HBoxContainer" type="HBoxContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2

[node name="SpriteMarker1" type="Marker2D" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer/HBoxContainer/VBoxContainer/Control"]
unique_name_in_owner = true
process_mode = 4
position = Vector2(50, 139.585)

[node name="CenterContainer" type="CenterContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="NameLabel1" type="Label" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer/HBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "#NAME"

[node name="OtherButton1" type="Button" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Other"

[node name="PanelContainer2" type="PanelContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"InsetPanelContainer"

[node name="HBoxContainer" type="HBoxContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2

[node name="SpriteMarker2" type="Marker2D" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer2/HBoxContainer/VBoxContainer/Control"]
unique_name_in_owner = true
process_mode = 4
position = Vector2(50, 139.585)

[node name="CenterContainer" type="CenterContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer2/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="NameLabel2" type="Label" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer2/HBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "#NAME"

[node name="OtherButton2" type="Button" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer2/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Other"

[node name="PanelContainer3" type="PanelContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"InsetPanelContainer"

[node name="HBoxContainer" type="HBoxContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer3"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer3/HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer3/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 2

[node name="SpriteMarker3" type="Marker2D" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer3/HBoxContainer/VBoxContainer/Control"]
unique_name_in_owner = true
process_mode = 4
position = Vector2(50, 139.585)

[node name="CenterContainer" type="CenterContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer3/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer3/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="NameLabel3" type="Label" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer3/HBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "#NAME"

[node name="OtherButton3" type="Button" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer3/HBoxContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Other"

[node name="HSeparator" type="HSeparator" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer"]
custom_minimum_size = Vector2(0, 14.145)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer"]
layout_mode = 2

[node name="StartMapGenerationButton" type="Button" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start"

[node name="CancelButton" type="Button" parent="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/HBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="MainMenuContainer/PanelContainer/InternalMainMenuContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MainMenuContainer/PanelContainer/InternalMainMenuContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer/HBoxContainer/CenterContainer/VBoxContainer/OtherButton1" to="." method="_on_other_button_1_pressed"]
[connection signal="pressed" from="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer2/HBoxContainer/CenterContainer/VBoxContainer/OtherButton2" to="." method="_on_other_button_2_pressed"]
[connection signal="pressed" from="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/CenterContainer/HBoxContainer2/PanelContainer3/HBoxContainer/CenterContainer/VBoxContainer/OtherButton3" to="." method="_on_other_button_3_pressed"]
[connection signal="pressed" from="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/HBoxContainer/StartMapGenerationButton" to="." method="_on_start_map_generation_button_pressed"]
[connection signal="pressed" from="NewGameContainer/MarginContainer/PanelContainer/InternalNewGameContainer/HBoxContainer/CancelButton" to="." method="_on_generate_cancel_button_pressed"]
